@@ -2,6 +2,7 @@
 == Changes in {project-version}
 
 === Bug Fixes
+ - https://github.com/codecentric/chaos-monkey-spring-boot/pull/243[#243] Fix health indicator assault is always active
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
 
 === Improvements
